Fixed formatting on Firefox

--- a/indexStyles.css
+++ b/indexStyles.css
@@ -14,6 +14,7 @@ body {
 	width: 75rem;
 	height: 24.6rem;
 	background-color: yellow;
+	line-height: 20px;
 	border: 6px solid;
 	border-color: magenta;
 	margin: auto;
